--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "![image showing signs' traits and categories](./zodiac.jpeg)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec node index.js -e .js .json .ejs"
   },
   "repository": {
     "type": "git",
